--- a/homeapp/templates/homeapp/team.html
+++ b/homeapp/templates/homeapp/team.html
@@ -13,9 +13,29 @@
         <div class="col-lg-8 mt-4">
             <h2 class="partner__card-title">{{ partner.name }}</h2>
             <p>{{ partner.context|linebreaksbr }}</p>
-            <button type="button" class="btn1 partner__card-button" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                Получить консультацию
-            </button>
+            <!-- Карусель для фотографий партнёра -->
+            <div id="carouselPartner{{ partner.id }}" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    {% for photo in partner.photos.all %}
+                    <div class="carousel-item {% if forloop.first %}active{% endif %}">
+                        <img class="d-block w-100" src="{{ photo.photo.url }}" alt="{{ photo.caption }}">
+                        {% if photo.caption %}
+                        <div class="carousel-caption d-none d-md-block">
+                            <p>{{ photo.caption }}</p>
+                        </div>
+                        {% endif %}
+                    </div>
+                    {% endfor %}
+                </div>
+                <a class="carousel-control-prev" href="#carouselPartner{{ partner.id }}" role="button" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselPartner{{ partner.id }}" role="button" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </a>
+            </div>
         </div>
         {# <a href="">Получить консультацию</a> #}
     </div>
