--- a/homeapp/templates/homeapp/base.html
+++ b/homeapp/templates/homeapp/base.html
@@ -521,6 +521,14 @@
             slidesToShow: 1,
             slidesToScroll: 1,
           },
+        },
+        {
+          breakpoint: 520,
+          settings: {
+            slidesToShow: 1,
+            slidesToScroll: 1,
+            dots: false,
+          },
         }
       ],
     });
